# revel_lycheeai_nvidia_isaac_sim_pick_and_place_hackathon

./: .gitignore  3080_submission.usd  README.md
log/: latest_list
src/log/: latest_list
src/panda_description/: CHANGELOG.rst  package.xml
src/panda_description/urdf/: panda.urdf  panda.urdf.xacro
src/panda_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
src/panda_moveit_config/config/: chomp_planning.yaml  controller_setting.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  stomp_planning.yaml
src/panda_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
src/perception_pipeline/: CMakeLists.txt  package.xml
src/perception_pipeline/config/: sensors_3d.yaml
src/perception_pipeline/launch/: perception_pipeline_demo.launch.py  pick_and_place.launch.py
src/perception_pipeline/src/: pick_place_with_grasp.cpp
